--- a/css/ga_styles.css
+++ b/css/ga_styles.css
@@ -61,7 +61,7 @@ a{ text-decoration:none}
 					.ov_Report em{ font-style:normal; color:#333; font-size:1.875em; padding:0 0 3px 0}
 					.ov_Report a.view{color: #3366ff; font-size:0.688em; float:right; text-decoration:none; margin-top:24px}						
 			.ov_graph_home{ width:99.8%; border:1px solid #ebe8eb; border-radius:3px; float:left;}
-			.ov_graph{ width:466px; height:283px}				
+			.ov_graph{ width:466px; height:283px; border:1px solid #ebe8eb; border-radius:3px; float:left;}				
 				.ov_graph h4, #ov_chart li h4{color:#666; font-size:0.875em; padding:12px}
 			#ov_chart{ overflow:hidden; clear:both; position:relative}
 			#ov_chart li{ width:300px; margin:19px 10px 0 0; border:1px solid #ebe8eb; border-radius:3px; float:left}
